# R-Type

./: .clang-format  .clang-tidy  .gitignore  AI_8cpp_source.html  AI_8hpp_source.html  Animation_8hpp_source.html  Architecture_8md.html  BehaviorFunc_8cpp_source.html  BehaviorFunc_8hpp_source.html  Behavior_8cpp_source.html  Behavior_8hpp_source.html  Button_8hpp_source.html  CIDockerfile  CMakeLists.txt  CMakePresets.json  Client_8cpp_source.html  Client_8hpp_source.html  Clock_8cpp_source.html  Clock_8hpp_source.html  Collision_8cpp_source.html  Collision_8hpp_source.html  Config_8cpp.html  Config_8cpp__incl.map  Config_8cpp__incl.md5  Config_8cpp_source.html  Config_8hpp.html  Config_8hpp.js  Config_8hpp__dep__incl.map  Config_8hpp__dep__incl.md5  Config_8hpp__incl.map  Config_8hpp__incl.md5  Config_8hpp_source.html  Core_8cpp_source.html  Core_8hpp_source.html  Dockerfile  EnemyBehavior_8cpp_source.html  EnemyBehavior_8hpp_source.html  EntityInfo_8cpp_source.html  EntityInfo_8hpp_source.html  EntitySchematic_8cpp_source.html  (+895 more)
.github/workflows/: deploy.yml  doxygen-gh-pages.yml  rtype.yml
assets/: musics_config.cfg  textures_config.cfg
client/: CMakeLists.txt  config.json
client/assets/: musics_config.cfg  sprites_config.cfg
client/include/: Button.hpp  Config.hpp  GuiException.hpp  Logger.hpp  MusicManager.hpp  SpriteManager.hpp  SystemMetrics.hpp  WindowManager.hpp
client/include/classes/: WindowManager.hpp
client/src/: MusicManager.cpp  SpriteManager.cpp  SystemMetrics.cpp  WindowManager.cpp  main.cpp  tcpCallback.cpp  udpCallback.cpp
client/src/classes/: WindowManager.cpp
docs/: Accessibility.md  Architecture.md  ComparativeStudy.md  Comparative_study.md  Developers.md  Doxyfile  Hub.md  VCPKG.md  protocol.txt
docs/Client/: Button.md  Config.md  Logger.md  MusicManager.md  SpriteManager.md  TextHandler.md  WindowManager.md
docs/Misc/: Config.md  Contributing.md  LevelFactory.md  Logger.md  VCPKG.md
docs/Server/: ECS.md
docs/Shared/: Config.md  ECS.md  LevelFactory.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+56 more)
server/: CMakeLists.txt  config.json
server/include/: Clock.hpp  Config.hpp  Core.hpp  Logger.hpp  Logging.hpp  QueryHandler.hpp  ScopeDuration.hpp  Server.hpp
server/include/socket/: Query.hpp  Server.hpp
server/modules/game/: CMakeLists.txt
server/modules/game/include/: Entity.hpp  Entity.inl  EntityInfo.hpp  Player.hpp  Registry.hpp  Registry.inl
server/modules/game/src/: Entity.cpp  EntityInfo.cpp  Player.cpp  Registry.cpp
server/modules/network/: CMakeLists.txt
server/modules/network/include/: Client.hpp  Query.hpp  QueryHandler.hpp  Worker.hpp
server/modules/network/include/socket/: Server.hpp
server/modules/network/src/: Client.cpp  QueryHandler.cpp  Worker.cpp
server/modules/network/src/socket/: Query.cpp  Server.cpp
server/modules/protocol/include/: Payload.hpp
server/src/: Clock.cpp  Config.cpp  Core.cpp  Logging.cpp  QueryHandler.cpp  ScopeDuration.cpp  Worker.cpp  main.cpp  registerClient.cpp  tcpCallback.cpp  udpCallback.cpp
server/src/socket/: Query.cpp  Server.cpp
shared/: CMakeLists.txt
shared/Clock/: CMakeLists.txt
shared/Clock/include/: Clock.hpp
shared/Clock/src/: Clock.cpp
shared/Config/: CMakeLists.txt
shared/Config/include/: Config.hpp
shared/Config/src/: Config.cpp
shared/ECS/: CMakeLists.txt
shared/ECS/include/: AI.hpp  Animation.hpp  Behavior.hpp  Collision.hpp  CollisionComp.hpp  Entity.hpp  EntityType.hpp  Input.hpp  LastShot.hpp  Player.hpp  Position.hpp  Registry.hpp  Registry.inl  RegistryManager.hpp  Sprite.hpp  Tags.hpp
shared/ECS/include/Factories/: LevelFactory.hpp
shared/ECS/src/: AI.cpp  Behavior.cpp  Collision.cpp  CollisionComp.cpp  Entity.cpp  Position.cpp  Registry.cpp  RegistryManager.cpp  Sprite.cpp
shared/ECS/src/Factories/: LevelFactory.cpp
shared/GameLogic/: CMakeLists.txt
shared/GameLogic/include/: BehaviorFunc.hpp  Collison.hpp  EnemyBehavior.hpp  EntitySchematic.hpp  GameLogic.hpp  GameLogicManager.hpp  GameLogicMode.hpp
shared/GameLogic/src/: BehaviorFunc.cpp  Collision.cpp  EnemyBehavior.cpp  EntitySchematic.cpp  GameLogic.cpp  GameLogicManager.cpp
shared/Logger/: CMakeLists.txt
shared/Logger/include/: Logger.hpp
shared/Logger/src/: Logger.cpp
shared/Runner/: CMakeLists.txt
shared/Runner/include/: ProceduralGenerator.hpp
shared/Runner/src/: ProceduralGenerator.cpp
shared/Scenarios/: entities_generator.py  level_1.cfg  level_4.cfg  output1000.cfg  scenarios.cfg
shared/Singleton/include/: Mutex.hpp  Singleton.hpp  Singleton.inl
shared/Texture/: CMakeLists.txt
shared/Texture/include/: Texture.hpp  TextureLoader.hpp
shared/Texture/src/: Texture.cpp  TextureLoader.cpp
shared/Thread/: CMakeLists.txt
shared/Thread/include/: ThreadPool.hpp
shared/Thread/src/: ThreadPool.cpp
shared/network/: CMakeLists.txt
shared/network/include/: Client.hpp  Query.hpp  QueryHandler.hpp  Worker.hpp
shared/network/include/query/: Header.hpp  NonTypedQuery.hpp  NonTypedQuery.inl  Payloads.hpp  RawRequest.hpp  TypedQuery.hpp  TypedQuery.inl  query.hpp
shared/network/include/socket/: Client.hpp  NRegistry.hpp  NetworkManager.hpp  Query.hpp  Server.hpp  ServerManager.hpp
shared/network/src/: Client.cpp  QueryHandler.cpp  Worker.cpp
shared/network/src/query/: Header.cpp  RawRequest.cpp
shared/network/src/socket/: Client.cpp  NRegistry.cpp  NetworkManager.cpp  Query.cpp  Server.cpp  ServerManager.cpp
tests/: CMakeLists.txt  shared.cpp
