cmake_minimum_required(VERSION 3.27.4)
project(rtype)

if (WIN32 OR MSVC)
	add_definitions(-D_WIN32_WINNT=0x0601)
endif()

include_directories(shared/Clock/include)
include_directories(shared/network/include)
include_directories(shared/ECS/include)
include_directories(shared/ECS/src/Factories)
include_directories(shared/Config/include)
include_directories(shared/Logger/include)
include_directories(shared/Texture/include)
include_directories(shared/GameLogic/include)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})

add_subdirectory(server)
add_subdirectory(client)
add_subdirectory(shared)
